SDK-REWORK Improved test coverage. Have a class loader problem